# scherzo

./: .gitignore  .hlint.yaml  AUTHORS.md  CHANGELOG.md  README.md  scherzo.cabal
lib/Alma/: Parser.hs
lib/Alma/Parser/: CharTrie.hs  Config.hs  TrieLexer.hs  Types.hs
src/alma2ly/: Main.hs
